--- a/src/main/resources/assets/assemble/lang/en_us.json
+++ b/src/main/resources/assets/assemble/lang/en_us.json
@@ -20,5 +20,7 @@
   "block.assemble.magenta_seat": "Magenta Seat",
   "block.assemble.pink_seat": "Pink Seat",
 
-  "block.assemble.copper_glass": "Copper Glass"
+  "block.assemble.copper_glass": "Copper Glass",
+
+  "item.assemble.hammer": "Hammer"
 }
