--- a/src/main/resources/assets/assemble/lang/en_us.json
+++ b/src/main/resources/assets/assemble/lang/en_us.json
@@ -30,6 +30,10 @@
 
   "block.assemble.flowering_vine": "Flowering Vines",
 
+  "item.assemble.goat_shag": "Goat Shag",
+
+  "item.assemble.cleaving_scissors": "Cleaving Scissors",
+
   "block.assemble.legal_brick": "Legal Bricks",
   "subtitles.block.legal.true_pain": "True Pain",
 
